--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "parcel index.html --open"
+    "start": "parcel index.html --open",
+    "build": "parcel build index.html --public-url='./'",
+    "deploy": "gh-pages -d dist"
   },
   "browserslist": "> 0.4% and not ie 11",
   "keywords": [],
@@ -15,6 +17,7 @@
     "boardgame.io": "^0.43.2"
   },
   "devDependencies": {
+    "gh-pages": "^3.1.0",
     "parcel-bundler": "^1.12.4"
   }
 }
